[package]
name = "implot-examples"
version = "0.0.0"
edition = "2018"
authors = ["Sandro Merkli", "implot-rs contributors"]
description = "implot examples, with backend code from the imgui examples in imgui-examples"
homepage = "https://github.com/4bb4/implot-rs"
repository = "https://github.com/4bb4/implot-rs"
license = "MIT/Apache-2.0"
publish = false

[dependencies]
clipboard = "0.5"
glium = { version = "0.27", default-features = true }
image = "0.23"
imgui-sys = { git = "https://github.com/Gekkio/imgui-rs/", rev = "66260c123b9a80275bd3a366ef403444db11a676" }
imgui = { git = "https://github.com/Gekkio/imgui-rs/", rev = "66260c123b9a80275bd3a366ef403444db11a676" }
imgui-glium-renderer = { git = "https://github.com/Gekkio/imgui-rs/", rev = "66260c123b9a80275bd3a366ef403444db11a676" }
imgui-winit-support = { git = "https://github.com/Gekkio/imgui-rs/", rev = "66260c123b9a80275bd3a366ef403444db11a676" }

implot-sys = { path = "../implot-sys" }
implot = { path = "../" }
