[package]
name = "implot-sys"
version = "0.1.0"
edition = "2018"
authors = ["Sandro Merkli", "implot-rs contributors"]
description = "Raw FFI bindings to implot"
license = "MIT/Apache-2.0"
categories = ["gui", "external-ffi-bindings"]
build = "build.rs"

[dependencies]
imgui-sys = { git = "https://github.com/Gekkio/imgui-rs/", branch = "master" }
imgui = { git = "https://github.com/Gekkio/imgui-rs/", branch = "master" }

[build-dependencies]
cc = "1.0"
bindgen = "0.53.1"
