[package]
name = "implot-sys"
version = "0.1.0"
edition = "2018"
authors = ["Sandro Merkli", "implot-rs contributors"]
description = "Raw FFI bindings to implot"
homepage = "https://github.com/4bb4/implot-rs"
repository = "https://github.com/4bb4/implot-rs"
license = "MIT/Apache-2.0"
categories = ["gui", "external-ffi-bindings"]
build = "build.rs"
links = "implot"

[dependencies]
imgui-sys = { git = "https://github.com/Gekkio/imgui-rs/", branch = "master" }
imgui = { git = "https://github.com/Gekkio/imgui-rs/", branch = "master" }

[build-dependencies]
cc = "1.0"
