[package]
name = "imgui-examples"
version = "0.0.0"
edition = "2018"
authors = ["Joonas Javanainen <joonas.javanainen@gmail.com>", "imgui-rs contributors"]
description = "imgui crate examples using Glium backend"
homepage = "https://github.com/Gekkio/imgui-rs"
repository = "https://github.com/Gekkio/imgui-rs"
license = "MIT/Apache-2.0"
publish = false

[dependencies]
clipboard = "0.5"
glium = { version = "0.27", default-features = true }
image = "0.23"
imgui-sys = { git = "https://github.com/Gekkio/imgui-rs/", branch = "master" }
imgui = { git = "https://github.com/Gekkio/imgui-rs/", branch = "master" }
imgui-glium-renderer = { git = "https://github.com/Gekkio/imgui-rs/", branch = "master" }
imgui-winit-support = { git = "https://github.com/Gekkio/imgui-rs/", branch = "master" }

implot-sys = { path = "../implot-sys" }
