[package]
name = "implot-glium-demo"
version = "0.0.0"
edition = "2018"
authors = ["Sandro Merkli", "implot-rs contributors"]
description = "implot examples, with backend code for using glium (originally from imgui-examples)"
homepage = "https://github.com/4bb4/implot-rs"
repository = "https://github.com/4bb4/implot-rs"
license = "MIT/Apache-2.0"
publish = false

[dependencies]
clipboard = "0.5"
glium = { version = "0.28", default-features = true }
image = "0.23"
imgui-sys = "0.6.0"
imgui = "0.6.0"
imgui-glium-renderer = "0.6.0"
imgui-winit-support = "0.6.0"

implot-sys = { path = "../../implot-sys" }
implot = { path = "../../" }
examples-shared = { path = "../examples-shared" }
