[package]
name = "implot-wgpu-demo"
version = "0.1.0"
authors = ["Benedikt Mandelkow <benedikt.mandelkow@rwth-aachen.de>", "imgui-wgpu contributors"]
edition = "2018"

[dependencies]
implot = { path = "../../" }

wgpu = "0.8.1"
winit = "0.24" # opening windows and handling input
futures = "^0.3.5" # executing async functions using blocking executor
imgui = "=0.7.0"
imgui-winit-support = "=0.7.0" # connection of input (keys) to imgui
#imgui-wgpu = "=0.13.0" # imgui backend for drawing using wgpu
imgui-wgpu = "=0.15.1"
examples-shared = { path = "../examples-shared" }
